<resources>
    <string name="app_name">Health Foods</string>
    <string name="settings">SETTINGS</string>
    <string name="profile">Profile</string>
    <string name="sales">Sales</string>
    <string name="list_sales">List of Sales</string>
    <string name="id_salesman">ID Salesman</string>
    <string name="prefix_salesman">Prefix Salesman</string>
    <string name="name_salesman">Name Salesman</string>
    <string name="id_vehicle">ID Vehicle</string>
    <string name="edit_id_salesman">Enter an ID for Salesman (numeric)</string>
    <string name="edit_id_vehicle">Enter an ID for vehicle</string>
    <string name="save">SAVE</string>
    <string name="nav_import">Import Customers &amp; Products</string>
    <string name="nav_export">Export Sales</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="import_customers">IMPORT CUSTOMERS</string>
    <string name="import_products">IMPORT PRODUCTS</string>
    <string name="export_invoices">EXPORT INVOICES</string>
    <string name="edit">EDIT</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_text">Before adding sales you must import the customers and products, and configure the profile of the seller.</string>
    <string name="update">UPDATE</string>
    <string name="customer">CUSTOMER: </string>
    <string name="new_sale_cash">New Cash Sale</string>
    <string name="new_sale_credit">New Credit Sale</string>
    <string name="new_sale_return">New Return Sale</string>
    <string name="date">DATE</string>
    <string name="invoices">INVOICES</string>
    <string name="product">PRODUCT</string>
    <string name="qty">QTY</string>
    <string name="dct">DCT</string>
    <string name="price">PRICE</string>
    <string name="total">TOTAL</string>
    <string name="void_invoice">VOID</string>
    <string name="voided_invoice">VOIDED</string>
    <string name="add_symbol">+</string>
    <string name="remove_symbol">-</string>
    <string name="checkout">CHECKOUT >></string>
    <string name="add_products">ADD PRODUCTS >></string>
    <string name="add_products_title">ADD PRODUCTS</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="back">BACK</string>
    <string name="um">UM</string>
    <string name="add">+ ADD</string>
    <string name="products_added">0 PRODUCTS ADDED</string>
    <string name="click_edit_udpate">Click on EDIT tu update the file location</string>
    <string name="um_prompt">Choose a UM</string>
    <string name="directory_selected_label">Directory selected:</string>
    <string name="choose_directory">Choose Directory</string>
    <string name="none">none</string>
    <string name="btn_choose">Choose in Dialog</string>
    <string name="btn_switch">Switch to Dialog Sample</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="textview">TextView</string>
    <string name="print">PRINT</string>
    <string name="connect">CONNECT</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="about">About</string>
    <string name="credit_note">Credit note:</string>
    <string name="sales_consecutive">Sales Consecutive</string>
    <string name="new_saleconsecutive">NEW SALES CONSECUTIVE</string>
    <string-array name="um_arrays">
        <item>BAG25LBS</item>
        <item>BALE48</item>
        <item>BULK5LBS</item>
        <item>CASE10</item>
        <item>CASE12</item>
        <item>CASE16</item>
        <item>CASE18</item>
        <item>CASE20</item>
        <item>CASE24</item>
        <item>CASE25</item>
        <item>CASE30</item>
        <item>CASE36</item>
        <item>CASE4</item>
        <item>CASE48</item>
        <item>CASE6</item>
        <item>CASE72</item>
        <item>CASE8</item>
        <item>CASE96</item>
        <item>LBS</item>
        <item>PACK300</item>
        <item>UNITS</item>
    </string-array>
</resources>
