<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_sd_storage_black_24dp"
            android:title="@string/nav_import" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_sd_storage_black_24dp"
            android:title="@string/nav_export" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/sales">
        <menu>
            <item
                android:id="@+id/nav_new_cash"
                android:icon="@drawable/ic_create_new_folder_black_24dp"
                android:title="@string/new_sale_cash" />

            <item
                android:id="@+id/nav_new_credit"
                android:icon="@drawable/ic_create_new_folder_black_24dp"
                android:title="@string/new_sale_credit" />

            <item
                android:id="@+id/nav_new_return"
                android:icon="@drawable/ic_create_new_folder_black_24dp"
                android:title="@string/new_sale_return" />
        </menu>
    </item>

</menu>
