<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juliancms.healthfoods.SaleCustomerActivity">

    <TextView
        android:id="@+id/id_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/customer"
        app:layout_constraintBottom_toTopOf="@+id/add_products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <AutoCompleteTextView
        android:id="@+id/customer"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:imeOptions="flagNoExtractUi"
        android:textAppearance="@style/BB_BottomBarItem_Shifting.TitleAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_vehicle"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/add_products"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:onClick="add_products"
        android:text="@string/add_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_products"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/product_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product"
            android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantity_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qty"
            android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/um_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/um"
            android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/remove_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
            android:textStyle="bold" />


    </LinearLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


    </ListView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/credit_note"
        android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
        app:layout_constraintEnd_toStartOf="@+id/credit_note"
        app:layout_constraintTop_toBottomOf="@+id/lv"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/termDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/sub_total"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/sub_total"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/total_tax"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/total_tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/total_total"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/total_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly2"
        tools:ignore="MissingConstraints,UnknownIdInLayout"
        tools:layout_editor_absoluteX="161dp" />

    <EditText
        android:id="@+id/credit_note"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:text="0"
        android:textAlignment="textEnd"
        android:textAppearance="@style/BB_BottomBarItem_Fixed.TitleAppearance"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>