<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juliancms.healthfoods.SettingsActivity">

    <TextView
        android:id="@+id/file_tblproducts"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/import_products"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/edit_tblproducts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/import_products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_tblproducts" />

    <TextView
        android:id="@+id/file_tblcustomers"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/import_customers"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_tblproducts"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/edit_tblcustomers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/import_customers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_tblcustomers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_newsaleconsecutive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/new_saleconsecutive"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/edit_tblcustomers"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edit_salesconsecutive"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/update_salesconsecutive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newsaleconsecutive"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/update_salesconsecutive"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newsaleconsecutive"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
